--- a/write-concise-web-tests-with-selenide/pom.xml
+++ b/write-concise-web-tests-with-selenide/pom.xml
@@ -56,21 +56,6 @@
   </dependencies>
 
   <build>
-    <plugins>
-      <plugin>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-maven-plugin</artifactId>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <version>3.0.0-M5</version>
-        <configuration>
-          <includes>
-            <include>**/*WT.java</include>
-          </includes>
-        </configuration>
-      </plugin>
-    </plugins>
+    <!-- inherited from parent -->
   </build>
 </project>
