--- a/spring-boot-override-test-properties/pom.xml
+++ b/spring-boot-override-test-properties/pom.xml
@@ -27,7 +27,7 @@
     </dependency>
     <dependency>
       <groupId>com.github.tomakehurst</groupId>
-      <artifactId>wiremock</artifactId>
+      <artifactId>wiremock-standalone</artifactId>
       <version>2.27.2</version>
       <scope>test</scope>
     </dependency>
