--- a/dynamic-sql-querying-with-pagination/pom.xml
+++ b/dynamic-sql-querying-with-pagination/pom.xml
@@ -62,6 +62,7 @@
             <groupId>com.querydsl</groupId>
             <artifactId>querydsl-apt</artifactId>
             <version>${querydsl.version}</version>
+            <classifier>jakarta</classifier>
           </dependency>
         </dependencies>
         <executions>
