--- a/.github/workflows/maven-parent.yml
+++ b/.github/workflows/maven-parent.yml
@@ -20,4 +20,4 @@ jobs:
 
       - name: Build all projects with Maven
         working-directory: spring-boot-integration-tests-testcontainers
-        run: mvnπ verify
+        run: mvn verify
