--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,7 +6,7 @@ on:
     - cron: '0 5 * * SUN'
 
 jobs:
-  build-java-8-11-17-projects:
+  build-maven-projects:
     strategy:
       fail-fast: false
       matrix:
@@ -28,3 +28,19 @@ jobs:
         run: |
           chmod +x ./buildJdk${{ matrix.versions }}Projects.sh
           ./buildJdk${{ matrix.versions }}Projects.sh
+
+  build-gradle-projects:
+    runs-on: ubuntu-latest
+    name: Build Java 8 projects
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v4
+        with:
+          java-version: 1.8
+          distribution: adopt
+          cache: gradle
+
+      - name: Build JDK 8 projects
+        run: ./buildGradleJdk8Projects.sh
