--- a/testing-libraries-overview/docker-compose.yml
+++ b/testing-libraries-overview/docker-compose.yml
@@ -1,12 +1,11 @@
-version: '3'
 services:
   database:
-    image: postgres:12.3
+    image: postgres:16.2
     environment:
       - POSTGRES_USER=testcontainers
       - POSTGRES_PASSWORD=secret
   keycloak:
-    image: jboss/keycloak:11.0.0
+    image: quay.io/keycloak/keycloak:19.0.3-legacy
     environment:
       - KEYCLOAK_USER=testcontainers
       - KEYCLOAK_PASSWORD=secret
