codebase/caching-validation-testcontainers (#164)
Co-authored-by: Philip Riecks <mail@philipriecks.de>

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
     <module>dependency-version-update-plugin</module>
     <module>testing-spring-rest-template</module>
     <module>azure-blob-storage-azurite-testing</module>
+    <module>caching-validation-testcontainers</module>
     <module>testing-libraries-overview</module>
   </modules>
 
