--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
     <module>testing-spring-rest-template</module>
     <module>azure-blob-storage-azurite-testing</module>
     <module>testing-libraries-overview</module>
+    <module>testcontainers-introduction</module>
+    <module>random-data-in-java-using-java-faker</module>
+    <module>launchdarkly-java-development-testing-hints</module>
+    <module>maven-junit-paralellize-tests</module>
+    <module>serverless-java-aws-examples/java-aws-lambda-custom-image</module>
   </modules>
 
   <properties>
