--- a/whats-new-in-spring-boot-2.3/pom.xml
+++ b/whats-new-in-spring-boot-2.3/pom.xml
@@ -10,7 +10,7 @@
     <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <artifactId>whats-new-in-spring-boot-2-3</artifactId>
+  <artifactId>whats-new-in-spring-boot-2.3</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>whats-new-in-spring-boot-2-3</name>
   <description>Updates with Spring Boot 2.3</description>
