--- a/random-data-in-java-using-java-faker/pom.xml
+++ b/random-data-in-java-using-java-faker/pom.xml
@@ -4,21 +4,16 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.0</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <groupId>de.rieckpil.blog</groupId>
+    <artifactId>blog-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <groupId>de.rieckpil.blog</groupId>
   <artifactId>random-data-java-faker</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>random-data-java-faker</name>
   <description>Demo project for Spring Boot</description>
-
-  <properties>
-    <java.version>17</java.version>
-  </properties>
 
   <dependencies>
     <dependency>
