--- a/testcontainers-introduction/pom.xml
+++ b/testcontainers-introduction/pom.xml
@@ -4,20 +4,15 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.springframework.boot</groupId>
-    <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.0</version>
-    <relativePath/> <!-- lookup parent from repository -->
+    <groupId>de.rieckpil.blog</groupId>
+    <artifactId>blog-parent</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
-  <groupId>de.rieckpil</groupId>
   <artifactId>testcontainers-introduction</artifactId>
   <version>1.0-SNAPSHOT</version>
 
-  <properties>
-    <java.version>17</java.version>
-    <testcontainers.version>1.17.3</testcontainers.version>
-  </properties>
 
   <dependencyManagement>
     <dependencies>
@@ -25,13 +20,6 @@
         <groupId>com.google.cloud</groupId>
         <artifactId>libraries-bom</artifactId>
         <version>26.1.1</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.testcontainers</groupId>
-        <artifactId>testcontainers-bom</artifactId>
-        <version>${testcontainers.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -102,7 +90,6 @@
     <dependency>
       <groupId>org.testcontainers</groupId>
       <artifactId>testcontainers</artifactId>
-      <version>1.17.3</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
