--- a/serverless-java-aws-examples/java-aws-lambda-custom-image/pom.xml
+++ b/serverless-java-aws-examples/java-aws-lambda-custom-image/pom.xml
@@ -6,7 +6,7 @@
     <groupId>de.rieckpil.blog</groupId>
     <artifactId>blog-parent</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
+    <relativePath>../../pom.xml</relativePath>
   </parent>
 
   <artifactId>java-aws-lambda-custom-image</artifactId>
