--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,10 @@
 {
-  "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": [
-    "config:recommended"
+  "extends": ["config:base"],
+  "enabledManagers": ["gradle", "maven", "dockerfile"],
+  "packageRules": [
+    {
+      "managers": ["npm", "yarn"],
+      "enabled": false
+    }
   ]
 }
