--- a/spring-boot-integration-tests-testcontainers/pom.xml
+++ b/spring-boot-integration-tests-testcontainers/pom.xml
@@ -30,6 +30,10 @@
       <artifactId>flyway-core</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-database-postgresql</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <scope>runtime</scope>
