--- a/spring-boot-kotlin-testcontainers/pom.xml
+++ b/spring-boot-kotlin-testcontainers/pom.xml
@@ -36,6 +36,10 @@
       <artifactId>flyway-core</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.flywaydb</groupId>
+      <artifactId>flyway-database-postgresql</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-reflect</artifactId>
     </dependency>
